# zengo-will

./: .gitignore  Cargo.toml  README.md  build.rs  manifest.template.yaml
examples/: demo.rs
examples/cli/: mod.rs
examples/proto/: beneficiary.rs  mod.rs  testator.rs
proto/: beneficiary.proto  testator.proto  will-service.proto
src/: cli.rs  main.rs  sealed.rs  server.rs
src/persistent_store/: mod.rs  sled.rs
src/proto/: beneficiary.rs  mod.rs  testator.rs  will.rs
tests/: dummy.rs
