[package]
name = "zengo-will"
version = "0.1.0"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.4", features = ["tls"] }
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
async-trait = "0.1"
sled = "0.34"
anyhow = "1.0"
futures = "0.3"
ring = "0.16.19"

thiserror = "1.0"
lazy_static = "1.4"
derivative = "2.2"
structopt = "0.3"

vdf = { git = "https://github.com/ZenGo-X/vdf", branch = "main", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.curv]
git = "https://github.com/ZenGo-X/curv"
tag = "v0.6.1"
default-features = false

[features]
default = ["curv/num-bigint"]

[dev-dependencies]
tempfile = "3.2"

[build-dependencies]
tonic-build = "0.4"
